# Up

./: Cargo.toml  Makefile  README.md  commands.toml
.github/workflows/: CI.yml
src/: command_runner.rs  config.rs  lib.rs  main.rs  params.rs
src/test/: dirs.rs
test/: valid_config.toml
test/invalid_configs/: empty_command.toml  invalid_toml.toml  invalid_toml2.toml  no_command.toml  no_command_name.toml
test/valid_configs/: commands.toml  multi_step.toml
