[package]
name = "up"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "warn", priority = 1 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
unwrap_used = { level = "warn", priority = 1 }
module_name_repetitions = { level = "allow", priority = 2 }

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = { version = "0.27" }
system_shutdown = "4.0.1"
strum = { version = "0.26.2", features = ["strum_macros"] }
config = "0.14"
dirs = "5.0"
rayon = "1.10"
